Adicionando o css na aplicação

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <title>Marcelo Malaquias</title>
     <meta name="author" content="Marcelo Simões Malaquias">
     <meta name="description" content="Primeira página criada no curso Universo Front end">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Cabeçalho de minha página -->
     <header>
-      <h1>Minha primeira página web</h1>
+      <h1 class="texto-centro">Minha primeira página web</h1>
     </header>
     <section>
-      <img src="img/perfil.jpg" alt="Marcelo Malaquias">
-      <p>Me chamo Marcelo Malaquias, tenho 38 anos e atuo na área de TI a 19 anos. Sou atualmente militar do exército mas já trabalhei em diversas empresas como Infraero, Ford, Stefanini. Minha área de especialização é infraestrutura, mas venho buscando adquirir conhecimento em desenvolvimento. Sou casado e pai de 2 filhos. </p>
-      <p>Meu objetivo maior nesse curso é começar a conhecer melhor a área de desenvolvimento, visto que a área de infraestrutura está cada vez mais saturada.</p>
+      <img class="img-centro img-circle" src="img/perfil.jpg" alt="Marcelo Malaquias">
+      <p class="texto-centro">Me chamo Marcelo Malaquias, tenho 38 anos e atuo na área de TI a 19 anos. Sou atualmente militar do exército mas já trabalhei em diversas empresas como Infraero, Ford, Stefanini. Minha área de especialização é infraestrutura, mas venho buscando adquirir conhecimento em desenvolvimento. Sou casado e pai de 2 filhos. </p>
+      <p class="texto-centro">Meu objetivo maior nesse curso é começar a conhecer melhor a área de desenvolvimento, visto que a área de infraestrutura está cada vez mais saturada.</p>
       <h3>Contato:</h3>
       <ul>
         <li>Email: mmalaquias@yahoo.com.br</li>
@@ -24,7 +25,7 @@
       </ul>
     </section>
     <footer>
-      <p>Desenvolvido em 23 de julho de 2018<p>
+      <p class="texto-centro">Desenvolvido em 23 de julho de 2018<p>
     </footer>
   </body>
 </html>
