Adicionando formulário de contato

--- a/index.html
+++ b/index.html
@@ -24,8 +24,33 @@
         <li>GitHub: <a target="_blank" href="https://github.com/marcelomalaquias">clique aqui</a> </li>
       </ul>
     </section>
+    <section>
+      <h3>Mensagem</h3>
+      <form>
+        <p>
+          <label for="nome">Nome:</label>
+          <input type="text" name="" id="nome" placeholder="nome">
+        </p>
+        <p>
+          <label for="email">Email:</label>
+          <input type="email" id="email" placeholder="email">
+        </p>
+        <p>
+          <label for="telefone">Telefone:</label>
+          <input type="tel" id="telefone" placeholder="telefone">
+        </p>
+        <p>
+          <label for="Mensagem">Mensagem:</label>
+          <textarea name="name" id="mensagem" placeholder="Deixe sua mensagem"></textarea>
+        </p>
+        <p>
+          <input type="submit" onclick="enviar()" value="Enviar">
+        </p>
+      </form>
+    </section>
     <footer>
       <p class="texto-centro">Desenvolvido em 23 de julho de 2018<p>
     </footer>
+    <script src="js/formulario.js"></script>
   </body>
 </html>
